--- a/.github/workflows/schrodinger2d.yml
+++ b/.github/workflows/schrodinger2d.yml
@@ -32,6 +32,9 @@ jobs:
         name: Build Eigen3 (not Windows)
         run: cmake ..
         working-directory: ../eigen/build
+      - uses: actions/checkout@v2
+        with:
+          submodules: true
       - run: mkdir build
       - if: ${{startsWith(matrix.os, 'windows')}}
         name: CMake (Windows)
