run tests from the right working directory

--- a/.github/workflows/schrodinger2d.yml
+++ b/.github/workflows/schrodinger2d.yml
@@ -59,4 +59,4 @@ jobs:
       - name: Run tests
         run: |
           ./schrodinger_test
-        working-directory: ./build/test
+        working-directory: ./build
