--- a/.github/workflows/schrodinger2d.yml
+++ b/.github/workflows/schrodinger2d.yml
@@ -43,6 +43,7 @@ jobs:
             -DCMAKE_BUILD_TYPE=Release `
             -DCMAKE_INTERPROCEDURAL_OPTIMIZATION=OFF `
             -DEigen3_DIR="$(resolve-path ../../eigen/build)" `
+            -DSCHRODINGER_LONG_DOUBLE=ON `
             ..
           cmake --build . --target schrodinger_test --config Release
         working-directory: ./build
@@ -53,7 +54,8 @@ jobs:
         name: CMake (not Windows)
         run: |
           cmake .. -DCMAKE_BUILD_TYPE=Release \
-            -DEigen3_DIR="$(pwd)/../../eigen/build"
+            -DEigen3_DIR="$(pwd)/../../eigen/build" \
+            -DSCHRODINGER_LONG_DOUBLE=ON
           cmake --build . --target schrodinger_test --config Release -- -j 3
         working-directory: ./build
       - name: Run tests
