no pedantic warnings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ set(BUILD_SHARED_LIBS ON)
 if (MSVC)
     add_compile_options(/W4 /WX)
 else ()
-    add_compile_options(-Wall -Wextra -Werror -Wpedantic -Wno-missing-field-initializers -Wno-c++20-designator)
+    add_compile_options(-Wall -Wextra -Werror -Wno-missing-field-initializers)
 endif ()
 
 find_package(Eigen3 3.3 REQUIRED NO_MODULE)
