get eigen from matslise

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,10 +15,6 @@ else ()
     add_compile_options(-Wall -Wextra -Werror -Wno-missing-field-initializers)
 endif ()
 
-find_package(Eigen3 3.3 REQUIRED NO_MODULE)
-message("-- Eigen3 version ${Eigen3_VERSION}")
-set(libraries Eigen3::Eigen)
-
 SET(SCHRODINGER_SRC src/schrodinger2d.cpp)
 
 add_library(schrodinger ${SCHRODINGER_SRC})
@@ -43,7 +39,7 @@ include_directories(lib/matslise)
 
 message("Schrodinger")
 
-set(libraries ${libraries} matslise)
+set(libraries matslise)
 
 target_link_libraries(schrodinger PUBLIC ${libraries})
 
