sparse (wrong) test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,8 +63,8 @@ add_test(NAME schrodinger_test COMMAND schrodinger_test)
 
 OPTION(SCHRODINGER_PYTHON "Also build the python bindings" ON)
 if (SCHRODINGER_PYTHON)
-    if (IS_DIRECTORY ${PROJECT_SOURCE_DIR}/lib/pybind11)
-        add_subdirectory(lib/pybind11)
+    if (IS_DIRECTORY ${PROJECT_SOURCE_DIR}/lib/matslise/cmake/pybind11)
+        add_subdirectory(lib/matslise/cmake/pybind11)
     else ()
         find_package(pybind11 QUIET)
     endif ()
