--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/matslise"]
 	path = lib/matslise
 	url = https://github.com/twist-numerical/matslise.git
+[submodule "lib/spectra"]
+	path = lib/spectra
+	url = https://github.com/yixuan/spectra.git
