First SLEPc tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ set(BUILD_SHARED_LIBS ON)
 if (MSVC)
     add_compile_options(/W4 /WX)
 else ()
-    add_compile_options(-Wall -Wextra -Werror -Wno-missing-field-initializers)
+    add_compile_options(-Wall -Wextra -Wno-missing-field-initializers)
 endif ()
 
 SET(SCHRODINGER_SRC src/schrodinger2d/eigenfunction.cpp src/schrodinger2d/schrodinger2d.cpp src/schrodinger2d/eigenpairs_dense.cpp src/schrodinger2d/eigenpairs_sparse.cpp)
@@ -48,11 +48,11 @@ set(ENV{PKG_CONFIG_PATH} "$ENV{SLEPC_DIR}/$ENV{PETSC_ARCH}/lib/pkgconfig:$ENV{SL
 set(ENV{PKG_CONFIG_PATH} "$ENV{PETSC_DIR}/$ENV{PETSC_ARCH}/lib/pkgconfig:$ENV{PETSC_DIR}/lib/pkgconfig:$ENV{PKG_CONFIG_PATH}")
 set(ENV{PKG_CONFIG_PATH} "$ENV{PETSC_DIR}/$ENV{PETSC_ARCH}:$ENV{PETSC_DIR}:$ENV{PKG_CONFIG_PATH}")
 find_package(PkgConfig REQUIRED)
-pkg_search_module(SLEPC IMPORTED_TARGET slepc)
-message("-- slepc-version: ${SLEPC_VERSION}")
-if (${SLEPC_VERSION})
-    set(libraries ${libraries} PkgConfig::SLEPC)
 
+pkg_search_module(SLEPC IMPORTED_TARGET slepc)
+if (SLEPC_VERSION)
+    message("-- Using SLEPc: ${SLEPC_VERSION}")
+    set(libraries ${libraries} PkgConfig::SLEPC)
     set(SCHRODINGER_SRC ${SCHRODINGER_SRC} src/util/right_kernel_sparse.cpp)
     add_definitions(-DSCHRODINGER_SLEPC)
 endif ()
