--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/twist-numerical/matslise.git
 [submodule "lib/spectra"]
 	path = lib/spectra
-	url = https://github.com/yixuan/spectra.git
+	url = https://github.com/toonijn/spectra.git
