--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -11,7 +11,7 @@ jobs:
         os: [
           ubuntu-20.04,
           # windows-2019,
-          macOS-11,
+          # macOS-11,
         ]
 
     steps:
