--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -7,11 +7,12 @@ jobs:
     name: Build wheels on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
         os: [
           ubuntu-20.04,
-          # windows-2019,
-          # macOS-11,
+          windows-2019,
+          macOS-11,
         ]
 
     steps:
