--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -27,7 +27,7 @@ jobs:
         run: python -m pip install cibuildwheel==2.12.0
 
       - name: Build wheels
-        run: python -m cibuildwheel --output-dir wheelhouse
+        run: python -m cibuildwheel --arch auto64 --output-dir wheelhouse
         env:
           CIBW_TEST_COMMAND: "python {project}/test/python/test_docs.py"
 
